INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/preProcessing)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/calArea)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/cal3dCoor)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/serialSend)
SET(APP_SRC main.cpp)
SET(OpenCV_DIR "/home/thomas/opencv-2.4.11/release")
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ADD_EXECUTABLE(grainVolumeSensor ${APP_SRC})
TARGET_LINK_LIBRARIES(grainVolumeSensor ${OpenCV_LIBS} libpreProcessing libcalArea libcal3dCoor libserialSend)



